--- a/app/src/main/res/layout/item_nhanvien.xml
+++ b/app/src/main/res/layout/item_nhanvien.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:orientation="horizontal"
     android:layout_height="100dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -14,7 +15,7 @@
         android:src="@drawable/ic_launcher_background"
         />
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center_vertical"
@@ -51,5 +52,19 @@
             android:textSize="15dp"
             />
     </LinearLayout>
+    <ImageButton
+        android:id="@+id/imbXemNhanVien"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/info"
+        android:layout_gravity="center"
+        />
+    <ImageButton
+        android:id="@+id/imbXoa"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@drawable/delete"
+        android:layout_gravity="center"
+        />
 
 </LinearLayout>
