--- a/app/src/main/res/layout/activity_nguyenhongquan_nhanvienmain.xml
+++ b/app/src/main/res/layout/activity_nguyenhongquan_nhanvienmain.xml
@@ -5,25 +5,57 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#DAAAAA"
     tools:context=".activity.Nguyenhongquan_ActivityNhanvienmain">
-    <SearchView
+    <TextView
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:background="@drawable/vien"
+        android:text="Danh sách toàn bộ nhân viên"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"/>
+    <android.widget.SearchView
         android:id="@+id/svNhanVienMain"
         android:layout_width="match_parent"
-        android:iconifiedByDefault="false"
-        android:layout_height="40dp" />
-    <ListView
-        android:id="@+id/lvNhanVienMain"
+        app:iconifiedByDefault="false"
+        app:searchIcon="@drawable/search"
+        android:background="@drawable/background_vien1"
+        android:layout_height="50dp"/>
+    <TextView
+        android:id="@+id/tvTongSo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tổng số : 20 nhân viên"
+        android:background="@drawable/background_item"
+        android:paddingHorizontal="5dp"
+        android:textColor="#ffffff"
+        android:textSize="20dp"
+        android:layout_marginLeft="20dp"
+        />
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="530dp"
-        />
+        android:layout_height="match_parent"
+        android:paddingHorizontal="20dp"
+        >
 
-    <android.widget.Button
+        <ListView
+            android:id="@+id/lvNhanVienMain"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#ffffff"></ListView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnThemNhanVienMain"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/ic_launcher_background"
-        />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#E18888"
+        android:clickable="true"
+        android:src="@drawable/ic_baseline_add_24"
+        app:elevation="4dp" />
+    </RelativeLayout>
 </LinearLayout>
