--- a/app/src/main/res/layout/activity_nguyenhongquan_themnhanvien.xml
+++ b/app/src/main/res/layout/activity_nguyenhongquan_themnhanvien.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:background="#C8C5C5"
     android:orientation="vertical"
     tools:context=".activity.Nguyenhongquan_ActivityThemnhanvien">
 
     <LinearLayout
         android:layout_width="400dp"
         android:orientation="vertical"
-        android:background="@drawable/vien3"
+        android:background="@drawable/background_vien1"
         android:layout_height="700dp">
         <TextView
             android:layout_width="wrap_content"
@@ -18,6 +20,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="50dp"
             android:text="Thêm nhân viên"
+            android:textColor="#000000"
             android:textSize="25dp"
             android:textStyle="bold" />
 
@@ -34,7 +37,9 @@
                 android:layout_height="90dp"
                 android:layout_marginTop="3dp"
                 android:layout_marginBottom="3dp"
-                android:src="@drawable/avatar" />
+                android:src="@drawable/avatar"
+                android:background="@drawable/background_image"
+                />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -45,7 +50,7 @@
                     android:id="@+id/btnCameraAdd"
                     android:layout_width="70dp"
                     android:layout_height="30dp"
-                    android:background="#000000"
+                    android:background="@drawable/background_button"
                     android:text="Camera"
                     android:textColor="#ffffff" />
 
@@ -53,7 +58,7 @@
                     android:id="@+id/btnLibraryAdd"
                     android:layout_width="70dp"
                     android:layout_height="30dp"
-                    android:background="#000000"
+                    android:background="@drawable/background_button"
                     android:text="Thư viện"
                     android:layout_marginTop="5dp"
                     android:textColor="#ffffff" />
@@ -165,7 +170,7 @@
                 android:id="@+id/btnAddNhanVien"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:background="#000000"
+                android:background="@drawable/background_button"
                 android:text="Thêm"
                 android:textColor="#ffffff" />
 
@@ -174,7 +179,7 @@
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:background="#000000"
+                android:background="@drawable/background_button"
                 android:text="Thoát"
                 android:textColor="#ffffff" />
         </LinearLayout>
