--- a/app/src/main/res/layout/activity_nguyenhongquan_thongtinnv.xml
+++ b/app/src/main/res/layout/activity_nguyenhongquan_thongtinnv.xml
@@ -6,11 +6,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
+    android:background="#C8C5C5"
     tools:context=".activity.Nguyenhongquan_ActivityThongtinnv">
     <LinearLayout
         android:layout_width="400dp"
         android:orientation="vertical"
-        android:background="@drawable/vien3"
+        android:background="@drawable/background_vien1"
         android:layout_height="700dp">
         <TextView
             android:layout_width="wrap_content"
@@ -32,7 +33,9 @@
                 android:id="@+id/imgAnhInfo"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
-                android:src="@drawable/avatar" />
+                android:src="@drawable/avatar"
+                android:background="@drawable/background_image"
+                />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -43,16 +46,17 @@
                     android:id="@+id/btnCameraSua"
                     android:layout_width="70dp"
                     android:layout_height="30dp"
-                    android:background="#000000"
+                    android:background="@drawable/background_button"
                     android:text="Camera"
                     android:visibility="gone"
-                    android:textColor="#ffffff" />
+                    android:textColor="#ffffff"
+                    />
 
                 <android.widget.Button
                     android:id="@+id/btnLibrarySua"
                     android:layout_width="70dp"
                     android:layout_height="30dp"
-                    android:background="#000000"
+                    android:background="@drawable/background_button"
                     android:text="Thư viện"
                     android:visibility="gone"
                     android:textColor="#ffffff" />
@@ -178,7 +182,7 @@
                 android:id="@+id/btnSuaNhanVienInfo"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:background="#000000"
+                android:background="@drawable/background_button"
                 android:text="Sửa"
                 android:visibility="gone"
                 android:textColor="#ffffff" />
@@ -188,7 +192,7 @@
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
-                android:background="#000000"
+                android:background="@drawable/background_button"
                 android:text="Thoát"
                 android:textColor="#ffffff" />
         </LinearLayout>
