--- a/app/src/main/res/layout/dialog_xoanhanvien.xml
+++ b/app/src/main/res/layout/dialog_xoanhanvien.xml
@@ -1,24 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="350dp"
+    android:layout_width="320dp"
     android:layout_height="200dp"
-    android:background="@drawable/vien1"
-    android:orientation="vertical">
-
-    <TextView
-        android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:background="#807777"
+    >
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        android:text="Bạn có chắc chắc muốn xóa nhân viên này không ?"
-        android:textColor="@color/black"
-        android:textSize="25sp"
-        android:textStyle="bold" />
-
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:background="@drawable/background_button"
+        >
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/delete"
+            android:layout_gravity="center"
+            android:padding="5dp"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Xóa nhân viên này?"
+            android:layout_gravity="center"
+            android:textColor="#FF0202"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Xóa toàn bộ thông tin về nhân viên này"
+        android:layout_marginHorizontal="15dp"
+        android:textSize="20dp"
+        android:textColor="#000000"
+        android:background="@drawable/background_vien1"
+        android:padding="5dp"
+        android:layout_marginTop="10dp"
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -27,7 +51,8 @@
             android:layout_marginRight="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
+            android:background="@drawable/background_button"
+            android:textColor="@color/white"
             android:text="Có"></android.widget.Button>
 
         <android.widget.Button
@@ -35,7 +60,8 @@
             android:layout_marginLeft="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
+            android:background="@drawable/background_button"
             android:text="Không"></android.widget.Button>
     </LinearLayout>
 
