--- a/app/src/main/res/layout/item_nhanvien.xml
+++ b/app/src/main/res/layout/item_nhanvien.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:orientation="horizontal"
     android:layout_height="100dp">
 
@@ -54,15 +54,15 @@
     </LinearLayout>
     <ImageButton
         android:id="@+id/imbXemNhanVien"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:background="@drawable/info"
         android:layout_gravity="center"
         />
     <ImageButton
         android:id="@+id/imbXoa"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:background="@drawable/delete"
         android:layout_gravity="center"
         />
