--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,9 @@
             android:layout_height="100dp"
             android:layout_marginTop="30dp"
             android:text="Đăng xuất"
-            android:background="#ffffff"
+            android:paddingTop="50dp"
+            android:paddingLeft="5dp"
+            android:background="@drawable/background_logout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btnBoPhan" />
