--- a/app/src/main/res/layout/activity_nguyenhongquan_nhanvienbp.xml
+++ b/app/src/main/res/layout/activity_nguyenhongquan_nhanvienbp.xml
@@ -25,6 +25,17 @@
         app:searchIcon="@drawable/search"
         android:background="@drawable/background_vien1"
         android:layout_height="50dp"/>
+    <TextView
+        android:id="@+id/tvTongSoBP"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Tổng số : 20 nhân viên"
+        android:background="@drawable/background_item"
+        android:paddingHorizontal="5dp"
+        android:textColor="#ffffff"
+        android:textSize="20dp"
+        android:layout_marginLeft="20dp"
+        />
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
