--- a/app/src/main/res/layout/item_nhanvien.xml
+++ b/app/src/main/res/layout/item_nhanvien.xml
@@ -2,8 +2,9 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:orientation="horizontal"
+    android:paddingEnd="10dp"
     android:layout_height="100dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -15,7 +16,7 @@
         android:src="@drawable/ic_launcher_background"
         />
     <LinearLayout
-        android:layout_width="200dp"
+        android:layout_width="170dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center_vertical"
@@ -45,7 +46,7 @@
             android:id="@+id/tvChucVuNhanVienItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="17/5/2000"
+            android:text="Developer Mobile"
             android:layout_marginBottom="3dp"
 
             android:textColor="@color/black"
