--- a/app/src/main/res/layout/activity_nguyenhongquan_nhanvienbp.xml
+++ b/app/src/main/res/layout/activity_nguyenhongquan_nhanvienbp.xml
@@ -46,7 +46,7 @@
             android:id="@+id/lvNhanVienBP"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#ffffff"></ListView>
+           ></ListView>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btnThemNhanVienBP"
