--- a/app/src/main/res/layout/activity_nguyenhongquan_nhanvienmain.xml
+++ b/app/src/main/res/layout/activity_nguyenhongquan_nhanvienmain.xml
@@ -43,7 +43,7 @@
             android:id="@+id/lvNhanVienMain"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#ffffff"></ListView>
+           ></ListView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnThemNhanVienMain"
