--- a/app/src/main/res/layout/activity_nguyenhongquan_bophan.xml
+++ b/app/src/main/res/layout/activity_nguyenhongquan_bophan.xml
@@ -35,7 +35,7 @@
             android:id="@+id/lvBoPhan"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#ffffff"
+           />/ android:background="#ffffff"
             />
 
 </LinearLayout>
